leaderboard query not working still
